python-apt (0.6.18) unstable; urgency=low

  [ Michael Vogt ]
  * doc/examples/print_uris.py:
    - added a example to show how the indexfile.ArchiveURI() can be used
      with binary packages

  [ Otavio Salvador ]
  * apt/cache.py:
    - fix commit doc string to also cite the open related callbacks
  
 -- 

python-apt (0.6.17) unstable; urgency=low

  * apt/progress.py: 
    - initialize FetchProgress.eta with the correct type
    - strip the staus str before passing it to InstallProgress.statusChanged()
    - added InstallProgress.statusChange(pkg, percent, status) 
    - make DumbInstallProgress a new-style class 
      (thanks to kamion for the suggestions)
    - fix various pychecker warnings
  * apt/cache.py:
    - return useful values on Cache.update()
    - Release locks on failure (thanks to Colin Watson)
    - fix various pychecker warnings
  * apt/package.py: 
    - fix various pychecker warnings
    - check if looupRecords succeeded
    - fix bug in the return statement of _downloadable()
  * apt/cache.py:
  * python/srcrecords.cc:
    - add "Restart" method
    - don't run auto "Restart" before performing a Lookup 
    - fix the initalization (no need to pass a PkgCacheType to the records)
    - added "Index" attribute
  * python/indexfile.cc:
    - added ArchiveURI() method
  
 -- Michael Vogt <mvo@debian.org>  Mon, 8 May 2006 22:34:58 +0200

python-apt (0.6.16.2) unstable; urgency=low
  
  * Non-maintainer upload.
  * debian/control:
    + Replaces: python-apt (<< 0.6.11), instead of Conflicts which is not
      correct here. (closes: #308586).

 -- Pierre Habouzit <madcoder@debian.org>  Fri, 14 Apr 2006 19:30:51 +0200
  
python-apt (0.6.16.1) unstable; urgency=low

  * memleak fixed when pkgCache objects are deallocated
  * typos fixed (thanks to Gustavo Franco)
  * pkgRecords.Record added to get raw record data
  * python/cache.cc: "key" in pkgCache::VerIterator.DependsList[key] is
                     no longer locale specific but always english