@@ -8,6 +8,7 @@ python-apt (0.6.18) unstable; urgency=low
   [ Otavio Salvador ]
   * apt/cache.py:
     - fix commit doc string to also cite the open related callbacks
+    - allow change of rootdir for APT database loading
   
  -- 
 
